--- a/RadeonTuner/RadeonTuner.vcxproj.filters
+++ b/RadeonTuner/RadeonTuner.vcxproj.filters
@@ -270,6 +270,9 @@
     <ClInclude Include="SettingFunc.h">
       <Filter>Page Files</Filter>
     </ClInclude>
+    <ClInclude Include="SettingEnumStrings.h">
+      <Filter>Page Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Page Include="MainPage.xaml">
